--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
       />
       <button type="submit">Search</button>
     </form>
-    <script type="module" src="/src/index.js"></script>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <button type="button" class="load-more">Load more</button>
   </body>
 </html>
